--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "rrweb": "^2.0.0-alpha.4"
   }
 }
